# jeex

./: LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json
anchor/: Anchor.toml  jest.config.ts  package-lock.json  package.json
anchor/programs/counter/src/: lib.rs
anchor/programs/jeex/: Cargo.toml
anchor/programs/jeex/src/: lib.rs
anchor/programs/jeex_full/: Cargo.toml
anchor/programs/jeex_full/src/: jeex-demo.rs  lib.rs
anchor/programs/tic-tac-toe/: Cargo.toml
anchor/programs/tic-tac-toe/src/: lib.rs
anchor/src/: index.ts  jeex-exports.ts
anchor/tests/: jeex-full.2spec.ts  jeex.spec.ts  tic-tac-toe.spec.ts
web/app/: fonts.css  global.css  layout.tsx
web/app/games/: page.tsx
web/app/games/[id]/: page.tsx
web/app/games/web3/: page.tsx
web/app/rules/: page.tsx
web/app/rules/rs/: page.tsx
web/app/rules/ru/: page.tsx
web/components/Eliminated/: Eliminated.module.scss  Eliminated.tsx
web/components/TimerProgress/: TimerProgress.tsx
web/components/cluster/: cluster-ui.tsx
web/components/counter/: counter-data-access.tsx  jeex-data-access.tsx
web/components/dashboard/: dashboard-feature.tsx
web/components/solana/: solana-provider.tsx
web/components/ui/: ui-layout.tsx
web/features/game/: constants.ts  round.mock.ts  types.ts  utils.ts
web/features/game/GameBoard/: GameBoard.module.scss  GameBoard.tsx
web/features/game/GameCell/: GameCell.module.scss  GameCell.tsx
web/features/game/GameChip/: GameChip.module.scss  GameChip.tsx
web/public/: browserconfig.xml  site.webmanifest
(+18 files in other folders)
